# aw-llm-worker

./: .gitignore  README.md  aw_llm_worker.py  pyproject.toml
awllm/: __init__.py  prompt.py  prompts_text.py
awllm/analysis/: aggregator.py  classifier.py  io.py  textconv.py
awllm/models/: __init__.py
awllm/utils/: __init__.py  helpers.py  state.py
visualization/: index.html
