[project]
name = "aw-llm-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aw-client>=0.5.15",
    "aw-core>=0.5.17",
    "click>=8.3.0",
    "llama-cpp-python>=0.3.16",
    "numpy>=1.26.0",
    "pyyaml>=6.0.3",
    "requests>=2.31.0",
]

[tool.uv]
# Ensure llama-cpp-python is built with Metal support on macOS
[tool.uv.pip]
config-settings = { "cmake.args" = "-DLLAMA_METAL=on" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
